--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <h1 class="text-4xl font-bold text-center mt-8">Stock Price Predictor</h1>
     <p class="text-lg text-center mt-4">
-      Choose a company and get the next 2 months predicted closing price!
+      Choose a company and get it's predicted closing price for today
     </p>
    
     <div class="max-w-md mx-auto mt-8">
